--- a/javascriptv3/example_code/reactnative/ReactNativeApp/.eslintrc
+++ b/javascriptv3/example_code/reactnative/ReactNativeApp/.eslintrc
@@ -2,5 +2,5 @@
 // SPDX-License-Identifier: Apache-2.0
 module.exports = {
   root: true,
-  extends: "eslint:recommended",
+  extends: '@react-native-community',
 };
