--- a/javascriptv3/example_code/reactnative/ReactNativeApp/package.json
+++ b/javascriptv3/example_code/reactnative/ReactNativeApp/package.json
@@ -14,13 +14,13 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-url-polyfill": "^1.3.0"
+    "react-native-url-polyfill": "^1.3.0",
+    "@react-native-community/eslint-config": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/runtime": "^7.22.6",
-    "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/react": "^18.0.24",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
