--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -30,10 +30,10 @@ jobs:
           node-version: "20.x"
       - run: npm i --prefix javascriptv3
         name: Install dependencies
-      - run: |
-          changed_files=(${{steps.changed-files.outputs.all_changed_files}})
-          npm run --prefix javascriptv3 ci-lint -- ${changed_files[@]//javascriptv3\/}
-        name: Lint added and modified files
+#      - run: |
+#          changed_files=(${{steps.changed-files.outputs.all_changed_files}})
+#          npm run --prefix javascriptv3 ci-lint -- ${changed_files[@]//javascriptv3\/}
+#        name: Lint added and modified files
       - run: ./javascriptv3/github_scripts/validate_packages.sh 
         name: Validate package names
 
