--- a/.doc_gen/metadata/polly_metadata.yaml
+++ b/.doc_gen/metadata/polly_metadata.yaml
@@ -1,26 +1,27 @@
-# zexi 0.4.0
 polly_DescribeVoices:
   title: Get &POL; voices available for synthesis using an &AWS; SDK
   title_abbrev: Get voices available for synthesis
   synopsis: get &POL; voices available for synthesis.
-  category:
+  synopsis_list:
+    - 
+  category: 
   languages:
     Java:
       versions:
         - sdk_version: 2
           github: javav2/example_code/polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.java2.describe_voice.main
     .NET:
       versions:
         - sdk_version: 3
           github: dotnetv3/Polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - Polly.dotnetv3.DescribeVoicesExample
     Rust:
@@ -28,7 +29,7 @@ polly_DescribeVoices:
         - sdk_version: 1
           github: rustv1/examples/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.rust.describe-voices
     Python:
@@ -36,7 +37,7 @@ polly_DescribeVoices:
         - sdk_version: 3
           github: python/example_code/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.DescribeVoices
@@ -45,7 +46,7 @@ polly_DescribeVoices:
         - sdk_version: 3
           github: ruby/example_code/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.ruby.describeVoices
   services:
@@ -54,24 +55,26 @@ polly_GetLexicon:
   title: Get an &POL; lexicon using an &AWS; SDK
   title_abbrev: Get a lexicon
   synopsis: get an &POL; lexicon.
-  category:
+  synopsis_list:
+    - 
+  category: 
   languages:
     .NET:
       versions:
         - sdk_version: 3
           github: dotnetv3/Polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - Polly.dotnetv3.GetLexiconExample
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.GetLexicon
@@ -81,24 +84,26 @@ polly_ListLexicons:
   title: List &POL; pronunciation lexicons using an &AWS; SDK
   title_abbrev: List pronunciation lexicons
   synopsis: list &POL; pronunciation lexicons.
-  category:
+  synopsis_list:
+    - 
+  category: 
   languages:
     Java:
       versions:
         - sdk_version: 2
           github: javav2/example_code/polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.java2.list_icons.main
     .NET:
       versions:
         - sdk_version: 3
           github: dotnetv3/Polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - Polly.dotnetv3.ListLexiconsExample
     Python:
@@ -106,7 +111,7 @@ polly_ListLexicons:
         - sdk_version: 3
           github: python/example_code/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.ListLexicons
@@ -115,7 +120,7 @@ polly_ListLexicons:
         - sdk_version: 1
           github: rustv1/examples/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.rust.list-lexicons
     Ruby:
@@ -123,7 +128,7 @@ polly_ListLexicons:
         - sdk_version: 3
           github: ruby/example_code/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.ruby.listLexicons
   services:
@@ -132,24 +137,26 @@ polly_PutLexicon:
   title: Store an &POL; pronunciation lexicon using an &AWS; SDK
   title_abbrev: Store a pronunciation lexicon
   synopsis: store an &POL; pronunciation lexicon.
-  category:
+  synopsis_list:
+    - 
+  category: 
   languages:
     .NET:
       versions:
         - sdk_version: 3
           github: dotnetv3/Polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - Polly.dotnetv3.PutLexiconExample
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.PutLexicon
@@ -158,7 +165,7 @@ polly_PutLexicon:
         - sdk_version: 1
           github: rustv1/examples/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.rust.put-lexicon
   services:
@@ -166,25 +173,27 @@ polly_PutLexicon:
 polly_SynthesizeSpeech:
   title: Synthesize speech from text with &POL; using an &AWS; SDK
   title_abbrev: Synthesize speech from text
-  synopsis: synthesize speech from text with &POL;.
-  category:
+  synopsis: 
+  synopsis_list:
+    - synthesize speech from text with &POL;.
+  category: 
   languages:
     Java:
       versions:
         - sdk_version: 2
           github: javav2/example_code/polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.java2.demo.main
     .NET:
       versions:
         - sdk_version: 3
           github: dotnetv3/Polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - Polly.dotnetv3.SynthesizeSpeechExample
             - description: Synthesize speech from text using speech marks with &POL; using an &AWS; SDK.
@@ -195,16 +204,17 @@ polly_SynthesizeSpeech:
         - sdk_version: 3
           github: python/example_code/polly
           excerpts:
-            - description:
+            - description: testdescription
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.Synthesize
+          sdkguide: guidline
     Ruby:
       versions:
         - sdk_version: 3
           github: ruby/example_code/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.ruby.synthesizeSpeech
     Rust:
@@ -212,7 +222,7 @@ polly_SynthesizeSpeech:
         - sdk_version: 1
           github: rustv1/examples/polly
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - polly.rust.synthesize-speech
   services:
@@ -221,15 +231,17 @@ polly_GetSpeechSynthesisTask:
   title: Get data about an &POL; speech synthesis task using an &AWS; SDK
   title_abbrev: Get data about a speech synthesis task
   synopsis: get data about an existing asynchronous &POL; speech synthesis task.
-  category:
+  synopsis_list:
+    - 
+  category: 
   languages:
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.GetSpeechSynthesisTask
@@ -239,15 +251,17 @@ polly_StartSpeechSynthesisTask:
   title: Start an &POL; speech synthesis task using an &AWS; SDK
   title_abbrev: Start a speech synthesis task
   synopsis: start an asynchronous &POL; speech synthesis task.
-  category:
+  synopsis_list:
+    - 
+  category: 
   languages:
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - python.example_code.polly.helper.PollyWrapper
                 - python.example_code.polly.StartSpeechSynthesisTask
@@ -257,15 +271,17 @@ polly_DeleteLexicon:
   title: Delete an &POL; lexicon using an &AWS; SDK
   title_abbrev: Delete a lexicon
   synopsis: delete an &POL; lexicon.
-  category:
+  synopsis_list:
+    - 
+  category: 
   languages:
     .NET:
       versions:
         - sdk_version: 3
           github: dotnetv3/Polly
-          sdkguide:
+          sdkguide: 
           excerpts:
-            - description:
+            - description: 
               snippet_tags:
                 - Polly.dotnetv3.DeleteLexiconExample
   services:
@@ -274,6 +290,8 @@ polly_LipSync:
   title: Create a lip-sync application with &POL; using an &AWS; SDK
   title_abbrev: Create a lip-sync application
   synopsis: create a lip-sync application with &POL;.
+  synopsis_list:
+    - 
   category: Scenarios
   languages:
     Python:
