--- a/.doc_gen/metadata/services.yaml
+++ b/.doc_gen/metadata/services.yaml
@@ -3026,6 +3026,21 @@ translate:
   tags:
     product_categories: {'Machine Learning &amp; AI'}
   version: translate-2017-07-01
+trustedadvisor:
+  long: '&AWS-TA-long;'
+  short: '&AWS-TA;'
+  sort: Trusted Advisor
+  expanded:
+    long: AWS Trusted Advisor
+    short: Trusted Advisor
+  blurb: inspects your AWS environment and recommends ways to save money, close security gaps, and improve system availability and performance.
+  guide:
+    subtitle: User Guide
+    url: awssupport/latest/user/trusted-advisor.html
+  api_ref: trustedadvisor/latest/APIReference/Welcome.html
+  tags:
+    product_categories: {'Management &amp; Governance'}
+  version: trustedadvisor-2022-09-15
 verifiedpermissions:
   api_ref: verifiedpermissions/latest/apireference/Welcome.html
   blurb: ''
