--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -165,6 +165,15 @@ bedrock-runtime_InvokeMistral7B:
             - description: Invoke the Mistral 7B foundation model to generate text.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeMistral7B
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/BedrockRuntime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Mistral 7B foundation model to generate text.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.Mistral7B
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -200,6 +209,15 @@ bedrock-runtime_InvokeMixtral8x7B:
             - description: Invoke the Mixtral 8x7B foundation model to generate text.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeMixtral8x7B
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/BedrockRuntime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Mixtral 8x7B foundation model to generate text.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.Mixtral8x7B
   services:
     bedrock-runtime: {InvokeModel}
 
