--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -57,6 +57,15 @@ bedrock-runtime_InvokeAmazonTitanImageGeneratorForImageGeneration:
             - description: Invoke the Amazon Titan Image Generator G1 model to generate images.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeTitanImage
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/BedrockRuntime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Amazon Titan Image Generator G1 foundation model to generate images.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.TitanImageGeneratorG1
   services:
     bedrock-runtime: {InvokeModel}
 
