--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -194,6 +194,27 @@ bedrock-runtime_InvokeMixtral8x7B:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeClaude3:
+  title: Invoke Anthropic Claude 3 on &BR;
+  title_abbrev: Invoke Anthropic Claude 3
+  synopsis: invoke Anthropic Claude 3 on &BR;.
+  languages:
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude 3 Sonnet with a text prompt.
+              snippet_tags:
+                - python.example_code.bedrock-runtime.InvokeClaude3WithText.config
+                - python.example_code.bedrock-runtime.InvokeClaude3WithText.main
+            - description: Invoke Anthropic Claude 3 Sonnet with a multimodal prompt.
+              snippet_tags:
+                - python.example_code.bedrock-runtime.InvokeClaude3Multimodal.config
+                - python.example_code.bedrock-runtime.InvokeClaude3Multimodal.main
+  services:
+    bedrock-runtime: {InvokeModel}
+
 bedrock-runtime_InvokeClaude:
   title: Invoke the Anthropic Claude 2 model on &BR; for text generation
   title_abbrev: Text generation with Anthropic Claude 2
