--- a/.doc_gen/metadata/acm_metadata.yaml
+++ b/.doc_gen/metadata/acm_metadata.yaml
@@ -27,7 +27,6 @@ acm_DescribeCertificate:
       versions:
         - sdk_version: 1
           github: cpp/example_code/acm
-          sdkguide:
           excerpts:
             - description:
               snippet_tags:
@@ -53,7 +52,6 @@ acm_GetCertificate:
       versions:
         - sdk_version: 1
           github: cpp/example_code/acm
-          sdkguide:
           excerpts:
             - description:
               snippet_tags:
@@ -84,6 +82,14 @@ acm_ListCertificates:
               snippet_tags:
                 - python.example_code.acm.AcmCertificate
                 - python.example_code.acm.ListCertificates
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.ListCertificates
   services:
     acm: {ListCertificates}
 acm_ImportCertificate:
@@ -101,6 +107,14 @@ acm_ImportCertificate:
               snippet_tags:
                 - python.example_code.acm.AcmCertificate
                 - python.example_code.acm.ImportCertificate
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.ImportCertificate
   services:
     acm: {ImportCertificate}
 acm_DeleteCertificate:
@@ -122,7 +136,6 @@ acm_DeleteCertificate:
       versions:
         - sdk_version: 1
           github: cpp/example_code/acm
-          sdkguide:
           excerpts:
             - description:
               snippet_tags:
@@ -148,7 +161,6 @@ acm_AddTagsToCertificate:
       versions:
         - sdk_version: 1
           github: cpp/example_code/acm
-          sdkguide:
           excerpts:
             - description:
               snippet_tags:
@@ -165,7 +177,6 @@ acm_ExportCertificate:
       versions:
         - sdk_version: 1
           github: cpp/example_code/acm
-          sdkguide:
           excerpts:
             - description:
               snippet_tags:
@@ -187,6 +198,14 @@ acm_ListTagsForCertificate:
               snippet_tags:
                 - python.example_code.acm.AcmCertificate
                 - python.example_code.acm.ListTagsForCertificate
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.ListTagsForCertificate
   services:
     acm: {ListTagsForCertificate}
 acm_RemoveTagsFromCertificate:
@@ -204,6 +223,14 @@ acm_RemoveTagsFromCertificate:
               snippet_tags:
                 - python.example_code.acm.AcmCertificate
                 - python.example_code.acm.RemoveTagsFromCertificate
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.RemoveTagsFromCertificate
   services:
     acm: {RemoveTagsFromCertificate}
 acm_RequestCertificate:
@@ -221,6 +248,14 @@ acm_RequestCertificate:
               snippet_tags:
                 - python.example_code.acm.AcmCertificate
                 - python.example_code.acm.RequestCertificate
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.RequestCertificate
   services:
     acm: {RequestCertificate}
 acm_ResendValidationEmail:
@@ -238,8 +273,48 @@ acm_ResendValidationEmail:
               snippet_tags:
                 - python.example_code.acm.AcmCertificate
                 - python.example_code.acm.ResendValidationEmail
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.ResendValidationEmail
   services:
     acm: {ResendValidationEmail}
+acm_RenewCertificate:
+  title: Renew an &ACM; certificate using an &AWS; SDK
+  title_abbrev: Renew a certificate
+  synopsis: renew an &ACM; certificate.
+  category:
+  languages:
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.RenewCertificate
+  services:
+    acm: {RenewCertificate}
+acm_UpdateCertificateOptions:
+  title: Update an &ACM; certificate using an &AWS; SDK
+  title_abbrev: Update a certificate
+  synopsis: update an &ACM; certificate.
+  category:
+  languages:
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/acm
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.acm.UpdateCertificateOptions
+  services:
+    acm: {UpdateCertificateOptions}
 acm_Usage_ImportListRemove:
   title: Manage &ACM; certificates using an &AWS; SDK
   title_abbrev: Manage certificates
@@ -274,5 +349,5 @@ acm_Usage_ImportListRemove:
                 - python.example_code.acm.Usage_ImportListRemove
   services:
     acm: {AddTagsToCertificate, DeleteCertificate, DescribeCertificate, GetCertificate,
-          ImportCertificate, ListCertificates, ListTagsForCertificate, RemoveTagsFromCertificate,
-          RequestCertificate, ResendValidationEmail}
+           ImportCertificate, ListCertificates, ListTagsForCertificate, RemoveTagsFromCertificate,
+           RequestCertificate, ResendValidationEmail}
