--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -57,6 +57,15 @@ bedrock-runtime_InvokeAmazonTitanImageGeneratorForImageGeneration:
             - description: Invoke the Amazon Titan Image Generator G1 model to generate images.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeTitanImage
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Amazon Titan Image Generator G1 foundation model to generate images.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.TitanImageGeneratorG1
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -74,6 +83,15 @@ bedrock-runtime_InvokeAmazonTitanImageGeneratorForTextGeneration:
             - description: Invoke the Amazon Titan Text G1 foundation model to generate text.
               snippet_files:
                 - javascriptv3/example_code/bedrock-runtime/actions/invoke-titan-text-express-v1.js
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Amazon Titan Text G1 foundation model to generate text.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.TitanTextG1
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -121,6 +139,15 @@ bedrock-runtime_InvokeStableDiffusionForImageGeneration:
             - description: Invoke the Stability.ai Stable Diffusion XL foundation model to generate images using L2 high level client.
               snippet_tags:
                 - bdr.abapv1.invokemodel_l2_stable_diffusion
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke Stability.ai Stable Diffusion XL foundation model to generate images.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.StableDiffusionXL
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -156,6 +183,15 @@ bedrock-runtime_InvokeMistral7B:
             - description: Invoke the Mistral 7B foundation model to generate text.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeMistral7B
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Mistral 7B foundation model to generate text.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.Mistral7B
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -191,6 +227,15 @@ bedrock-runtime_InvokeMixtral8x7B:
             - description: Invoke the Mixtral 8x7B foundation model to generate text.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeMixtral8x7B
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Mixtral 8x7B foundation model to generate text.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.Mixtral8x7B
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -245,7 +290,7 @@ bedrock-runtime_InvokeClaude:
     .NET:
       versions:
         - sdk_version: 3
-          github: dotnetv3/BedrockRuntime
+          github: dotnetv3/Bedrock-runtime
           sdkguide:
           excerpts:
             - description: Asynchronously invoke the Anthropic Claude 2 foundation model to generate text.
@@ -317,7 +362,7 @@ bedrock-runtime_InvokeJurassic2:
     .NET:
       versions:
         - sdk_version: 3
-          github: dotnetv3/BedrockRuntime
+          github: dotnetv3/Bedrock-runtime
           excerpts:
             - description: Asynchronously invoke the AI21 Labs Jurassic-2 foundation model.
               snippet_tags:
@@ -377,7 +422,7 @@ bedrock-runtime_InvokeLlama2:
     .NET:
       versions:
         - sdk_version: 3
-          github: dotnetv3/BedrockRuntime
+          github: dotnetv3/Bedrock-runtime
           excerpts:
             - description: Asynchronously invoke the Meta Llama 2 foundation model to generate text.
               snippet_tags:
@@ -415,6 +460,15 @@ bedrock-runtime_InvokeModelWithResponseStream:
             - description: Invoke the Anthropic Claude 2 model and process the response stream.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke the Anthropic Claude 2 model and process the response stream.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.ClaudeWithResponseStream
   services:
     bedrock-runtime: {InvokeModelWithResponseStream}
 
