Adding helper code

--- a/.doc_gen/metadata/medical-imaging_metadata.yaml
+++ b/.doc_gen/metadata/medical-imaging_metadata.yaml
@@ -54,7 +54,8 @@ medical-imaging_CreateDatastore:
               snippet_tags:
                 - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.CreateDatastore
-            - description: Code to instantiate the wrapper object.
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
               snippet_tags:
                 - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     Java:
@@ -101,7 +102,12 @@ medical-imaging_DeleteDatastore:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.DeleteDatastore
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     Java:
       versions:
         - sdk_version: 2
@@ -145,7 +151,12 @@ medical-imaging_ListDatastores:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.ListDatastores
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     Java:
       versions:
         - sdk_version: 2
@@ -190,7 +201,12 @@ medical-imaging_GetDatastore:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.GetDatastore
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     Java:
       versions:
         - sdk_version: 2
@@ -225,7 +241,12 @@ medical-imaging_StartDICOMImportJob:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.StartDICOMImportJob
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -269,7 +290,12 @@ medical-imaging_GetDICOMImportJob:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.GetDICOMImportJob
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -313,7 +339,12 @@ medical-imaging_ListDICOMImportJobs:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.ListDICOMImportJobs
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -348,16 +379,23 @@ medical-imaging_SearchImageSets:
           excerpts:
             - description: The utility function for searching image sets.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.SearchImageSets
             - description: "Use case #1: EQUAL operator."
               snippet_tags:
                 - python.example_code.medical-imaging.SearchImageSets.use_case1
-            - description: "Use case #2: BETWEEN operator using DICOMStudyDate and DICOMStudyTime."
+            - description: >
+                Use case #2: BETWEEN operator using DICOMStudyDate and
+                DICOMStudyTime.
               snippet_tags:
                 - python.example_code.medical-imaging.SearchImageSets.use_case2
             - description: "Use case #3: BETWEEN operator using createdAt. Time studies were previously persisted."
               snippet_tags:
                 - python.example_code.medical-imaging.SearchImageSets.use_case3
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -431,7 +469,12 @@ medical-imaging_GetImageSet:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.GetImageSet
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -466,6 +509,7 @@ medical-imaging_GetImageSetMetadata:
           excerpts:
             - description: Utility function to get image set metadata.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.GetImageSetMetadata
             - description: Get image set metadata without version.
               snippet_tags:
@@ -473,6 +517,10 @@ medical-imaging_GetImageSetMetadata:
             - description: Get image set metadata with version.
               snippet_tags:
                 - python.example_code.medical-imaging.GetImageSetMetadata.withVersionID
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -528,7 +576,12 @@ medical-imaging_GetImageFrame:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.GetImageFrame
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -572,7 +625,12 @@ medical-imaging_ListImageSetVersions:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.ListImageSetVersions
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -607,7 +665,12 @@ medical-imaging_UpdateImageSetMetadata:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.UpdateImageSetMetadata
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -645,6 +708,7 @@ medical-imaging_CopyImageSet:
           excerpts:
             - description: Utility function to copy an image set.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.CopyImageSet
             - description: Copy an image set without a destination.
               snippet_tags:
@@ -655,6 +719,10 @@ medical-imaging_CopyImageSet:
                 - python.example_code.medical-imaging.CopyImageSet1
                 - python.example_code.medical-imaging.CopyImageSet2
                 - python.example_code.medical-imaging.CopyImageSet3
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -695,7 +763,12 @@ medical-imaging_DeleteImageSet:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.DeleteImageSet
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -739,7 +812,12 @@ medical-imaging_TagResource:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.TagResource
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -774,7 +852,12 @@ medical-imaging_UntagResource:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.UntagResource
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -809,7 +892,12 @@ medical-imaging_ListTagsForResource:
           excerpts:
             - description:
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.ListTagsForResource
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -848,6 +936,7 @@ medical-imaging_Scenario_TaggingDataStores:
                 - python.example_code.medical-imaging.tagging_datastore.tag
             - description: The utility function for tagging a resource.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.TagResource
             - description: To list tags for a data store.
               snippet_tags:
@@ -855,6 +944,7 @@ medical-imaging_Scenario_TaggingDataStores:
                 - python.example_code.medical-imaging.tagging_datastore.list
             - description: The utility function for listing a resource's tags.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.ListTagsForResource
             - description: To untag a data store.
               snippet_tags:
@@ -862,7 +952,12 @@ medical-imaging_Scenario_TaggingDataStores:
                 - python.example_code.medical-imaging.tagging_datastore.untag
             - description: The utility function for untagging a resource.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.UntagResource
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
@@ -934,6 +1029,7 @@ medical-imaging_Scenario_TaggingImageSets:
                 - python.example_code.medical-imaging.tagging_image_set.tag
             - description: The utility function for tagging a resource.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.TagResource
             - description: To list tags for an image set.
               snippet_tags:
@@ -941,6 +1037,7 @@ medical-imaging_Scenario_TaggingImageSets:
                 - python.example_code.medical-imaging.tagging_image_set.list
             - description: The utility function for listing a resource's tags.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.ListTagsForResource
             - description: To untag an image set.
               snippet_tags:
@@ -948,7 +1045,12 @@ medical-imaging_Scenario_TaggingImageSets:
                 - python.example_code.medical-imaging.tagging_image_set.untag
             - description: The utility function for untagging a resource.
               snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper
                 - python.example_code.medical-imaging.UntagResource
+            - description: >
+               The following code instantiates the MedicalImagingWrapper object.
+              snippet_tags:
+                - python.example_code.medical-imaging.MedicalImagingWrapper.instantiation
     JavaScript:
       versions:
         - sdk_version: 3
